--- a/FastFoodMVC/Views/Shared/_Layout.cshtml
+++ b/FastFoodMVC/Views/Shared/_Layout.cshtml
@@ -60,6 +60,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" asp-controller="home" asp-action="book" >Book Table</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="admin" asp-action="index">Admin</a>
+                            </li>
                         </ul>
                         <div class="user_option">
                             <a href="" class="user_link">
