--- a/FastFoodMVC/Views/_ViewImports.cshtml
+++ b/FastFoodMVC/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using FastFoodMVC
-@*@using FastFoodMVC.Models*@
+@using FastFoodMVC.Models*
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
