--- a/FastFoodMVC/Views/Admin/Edit.cshtml
+++ b/FastFoodMVC/Views/Admin/Edit.cshtml
@@ -1,5 +1,23 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
 }
+@model Food
+<form asp-controller="" asp-action="" method="post">
+    <input type="hidden" value="@Model.Id" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+    <div class="input-group mb-3">
+        <span class="input-group-text" id="inputGroup-sizing-default">Name</span>
+        <input asp-for="Name" type="text" value="@Model.Name" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+    </div>
+    <div class="input-group">
+        <span class="input-group-text">Description</span>
+        <textarea asp-for="Description" class="form-control" aria-label="With textarea"></textarea>
+    </div>
+    <div class="input-group mb-3">
+        <span class="input-group-text" id="inputGroup-sizing-default">Price</span>
+        <input asp-for="Price" type="number" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+    </div>
+    <input type="hidden" value="@Model.Image" class="form-control" id="inputGroupFile02">
+    <div class="input-group mb-3">
+        <input asp-for="Image" type="file" class="form-control" id="inputGroupFile02">
+        <label class="input-group-text" for="inputGroupFile02">Upload</label>
+    </div>
+</form>
