--- a/FastFoodMVC/Views/Admin/Index.cshtml
+++ b/FastFoodMVC/Views/Admin/Index.cshtml
@@ -1,3 +1,20 @@
 ﻿@{
 }
-<h5>Hello</h5>
+<table class="table table-striped-columns">
+    <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">First</th>
+            <th scope="col">Last</th>
+            <th scope="col">Handle</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td></td>
+        </tr>
+    </tbody>
+</table>
