--- a/FastFoodMVC/Views/Shared/_Layout.cshtml
+++ b/FastFoodMVC/Views/Shared/_Layout.cshtml
@@ -60,8 +60,16 @@
                             <li class="nav-item">
                                 <a class="nav-link" asp-controller="home" asp-action="book" >Book Table</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" asp-controller="admin" asp-action="index">Admin</a>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Dropdown
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" asp-controller="admin" asp-action="index" >Admin</a></li>
+                                    <li><a class="dropdown-item" asp-controller="admin" asp-action="add">Add</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                </ul>
                             </li>
                         </ul>
                         <div class="user_option">
