--- a/FastFoodMVC/Views/_ViewImports.cshtml
+++ b/FastFoodMVC/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using FastFoodMVC
 @using FastFoodMVC.Models*
+@using FastFoodMVC.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
